@@ -19,6 +19,10 @@ x2goclient (4.0.1.3-0x2go1) UNRELEASED; urgency=low
       X2Go Client of that version. (Fixes: #384).
     - Minor update of the German translation file.
 
+  [ Ricardo Díaz Martín ]
+  * New upstream version (4.0.1.3):
+    - Update Spanish translation file.
+
   [ Daniel Lindgren ]
   * New upstream version (4.0.1.3):
     - Update Swedish translation file.
